Adjust the architecture
